traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:23: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  return (getX() == getMondeLargeur()-1 && getY() = getMondeHauteur()-1);
                                        ^